-
Type:
Bug
-
Resolution: Done
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Replication
-
None
-
ALL
-
None
-
None
-
None
-
None
-
None
-
None
-
None
When you change config that creates a replica set with an even number of votes the warning logged in the log is:
"replSet total number of votes is even - add arbiter or give one member an extra vote"
Since we no longer allow giving votes > 1 (SERVER-10513) the message should be changed to something like "replSet total number of votes is even - add arbiter or set votes to 0 on one of the members"
Maybe even change "number of votes is even" to "even number of voting members in replica set" since the number being even cannot be caused by anything other than even number of voting members.