SERVER-13610 update even number of votes warning due to non-numeric votes